# homegrown

./: '  .gitignore  README.md  bla.md  build-create-run.sh  changes.diff  create-image.sh  efi-bootloader.md  gdb.sh  go.work  go.work.sum  hardware.sh  install-dependencies.sh  notes.md  run-qemu.sh  test-os.sh  todo.md
code/: CMakeLists.txt  Makefile  boot.asm  build.sh  clean.sh  create-os-image.sh  kernel.c  link.ld  setup.cmake
code/bootloaders/: CMakeLists.txt  gdt.inc  stage_1_bootloader.asm  stage_2_bootloader.asm  util.inc
code/include/: bootboot.h  interrupts.h  types.h
code/include/util/: log.h
code/kernel/: CMakeLists.txt  kernel.c  kernel.ld  main.ld
code/kernel/src/: main.c
code/kernel/util/: CMakeLists.txt
code/src/: bootloader.asm  bootloader_old.asm  gtd.asm  interrupts.S  interrupts.c  kernel.c
code/src/util/: log.c
code/uefi/: CMakeLists.txt  Makefile  README.md  efi_application.efi  fat.img  hello.c  memory.c
code/uefi-image-creator/: CMakeLists.txt  write_gpt.c
code/uefi-image-creator/include/: crc32-table.h
code/uefi/include/: c-efi-base.h  c-efi-protocol-block-io.h  c-efi-protocol-disk-io.h  c-efi-protocol-file.h  c-efi-protocol-graphics-output.h  c-efi-protocol-loaded-image.h  c-efi-protocol-simple-file-system.h  c-efi-protocol-simple-text-output.h  c-efi-system.h  memory.h
code/uefi/include/efi/: c-efi-base.h  c-efi-protocol-block-io.h  c-efi-protocol-device-path-from-text.h  c-efi-protocol-device-path.h  c-efi-protocol-disk-io.h  c-efi-protocol-graphics-output.h  c-efi-protocol-loaded-image.h  c-efi-protocol-simple-file-system.h  c-efi-protocol-simple-text-input-ex.h
code/uefi/src/: main.c
code/util/include/util/: array-types.h  ring-buffer.h  types.h
code/util/src/: log.c
code/util/src/memory/: arena.c  buddy-allocator.c  pool-allocator.c
projects/abstraction/: CMakeLists.txt
projects/abstraction/efi/code/: CMakeLists.txt
projects/abstraction/interrupts/code/: CMakeLists.txt
projects/abstraction/log/code/: CMakeLists.txt
projects/efi/code/: CMakeLists.txt
projects/efi/code/acpi/: CMakeLists.txt
projects/efi/code/error/: CMakeLists.txt
projects/efi/code/firmware/: CMakeLists.txt
projects/efi/code/globals/: CMakeLists.txt
projects/efi/code/log/: CMakeLists.txt
projects/efi/code/memory/: CMakeLists.txt
projects/efi/code/src/: bootboot.c  data-reading.c  gdt.c  globals.c  main.c  smp.S
projects/free-c/code/: CMakeLists.txt
projects/freestanding/code/: CMakeLists.txt
projects/freestanding/code/log/: CMakeLists.txt
projects/image-builder/code/: CMakeLists.txt
projects/image-builder/code/src/: configuration.c  crc32.c  fat32.c  gpt.c  main.c  mbr.c  util.c
projects/image-builder/code/util/: CMakeLists.txt
projects/interoperation/code/: CMakeLists.txt  create_magic.py
projects/interoperation/code/include/: kernel-parameters.h  memory-management.h  types.h
projects/interoperation/code/src/: create_magic.py  main.c
projects/kernel-test/code/: CMakeLists.txt  main.c
projects/kernel-test/code/test-framework/: CMakeLists.txt
projects/kernel-test/code/tests/: CMakeLists.txt  add-kernel-folder.cmake
projects/kernel-test/code/util/: CMakeLists.txt
projects/kernel/code/: CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  main.ld  target_dependencies.dot  target_dependencies.dot.cpu-Release  target_dependencies.dot.cpu-Release.dependers  target_dependencies.dot.kernel-Release  target_dependencies.dot.log-Release  target_dependencies.dot.log-Release.dependers  target_dependencies.dot.memory-management-Release  target_dependencies.dot.memory-management-Release.dependers  target_dependencies.dot.memory-manipulation-Release.dependers  target_dependencies.dot.peripheral-screen-Release  target_dependencies.dot.peripheral-screen-Release.dependers  target_dependencies.dot.status-Release  target_dependencies.dot.status-Release.dependers  target_dependencies.dot.text-Release  target_dependencies.dot.text-Release.dependers  target_dependencies.dot.util-Release.dependers
projects/kernel/code/buffer/: CMakeLists.txt
projects/kernel/code/cpu/: CMakeLists.txt
projects/kernel/code/hardware/: CMakeLists.txt
projects/kernel/code/hash/: CMakeLists.txt
projects/kernel/code/include/: assert.h  idt.h  test.h
projects/kernel/code/log/: CMakeLists.txt
projects/kernel/code/maths/: CMakeLists.txt
projects/kernel/code/memory/: CMakeLists.txt
projects/kernel/code/memory-management/: CMakeLists.txt
projects/kernel/code/peripheral/: CMakeLists.txt
projects/kernel/code/posix-util/: CMakeLists.txt
projects/kernel/code/quickie/: CMakeLists.txt
projects/kernel/code/src/: idt.c  idts.S  main.c  test.c
projects/kernel/code/status/: CMakeLists.txt
projects/kernel/code/test-framework/: CMakeLists.txt
projects/kernel/code/text/: CMakeLists.txt
projects/kernel/code/util/: CMakeLists.txt
projects/os-loader/code/: CMakeLists.txt
projects/os-loader/code/src/: data-reading.c  gdt.c  globals.c  main.c  printing.c
projects/platform-abstraction/code/: CMakeLists.txt
projects/platform-abstraction/code/cpu/: CMakeLists.txt
projects/platform-abstraction/code/efi/: CMakeLists.txt
projects/platform-abstraction/code/interrupts/: CMakeLists.txt
projects/platform-abstraction/code/log/: CMakeLists.txt
projects/platform-abstraction/code/physical/: CMakeLists.txt
projects/platform-abstraction/code/virtual/: CMakeLists.txt
projects/posix/code/: CMakeLists.txt
projects/posix/code/file/: CMakeLists.txt
projects/posix/code/log/: CMakeLists.txt
projects/posix/code/test-framework/: CMakeLists.txt
projects/shared/code/: CMakeLists.txt
projects/shared/code/assert/: CMakeLists.txt
projects/shared/code/buffer/: CMakeLists.txt
projects/status/code/: CMakeLists.txt
projects/uefi-image-creator/code/: CMakeLists.txt  write_gpt.c
projects/uefi/code/: CMakeLists.txt
projects/x86-efi/code/: CMakeLists.txt
projects/x86-physical/code/: CMakeLists.txt
projects/x86-policy/code/: CMakeLists.txt
projects/x86-virtual/code/: CMakeLists.txt
projects/x86/code/: CMakeLists.txt
(+777 files in other folders)
